fix: remove blue background on button when tapped on mobile

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   align-items: center;
   width: 100vw;
   height: 100vh;
-  background: url('idea-g59b4b5d9b_1920.jpg');
+  background: url('lightbulb.jpg');
   background-color: #0077b6;
   background-repeat: no-repeat;
   background-position: right 35% center;
@@ -57,14 +57,13 @@
   border: 1px solid #10002b;
   border-radius: 50%;
   color: #03045e;
-  cursor: pointer;
-}
-
-.generate-button:hover {
-  background-color: rgba(255, 255, 0, 0.8);
 }
 
 .generate-button:focus {
+  outline: none;
+}
+
+.generate-button:active {
   outline: none;
 }
 
@@ -93,6 +92,11 @@
     height: 8em;
     font-size: 2rem;
     line-height: 1.5;
+    cursor: pointer;
+  }
+
+  .generate-button:hover {
+    background-color: rgba(255, 255, 0, 0.8);
   }
 
   .generate-button:active {
